fixes brand nav menu alignemnt

--- a/src/publications/1903/publication.scss
+++ b/src/publications/1903/publication.scss
@@ -11,6 +11,9 @@
 header{
     .navItem {
         padding-top: 2rem!important;
+        &.brandHeader{
+            padding-top: 0.75rem !important;
+        }
     }
     .middle-head{
         .articleTitles{ 
